Fix: 메인페이지 가운데 정렬

--- a/pages/main/main.html
+++ b/pages/main/main.html
@@ -21,7 +21,7 @@
     </header>
     <div class="content">
         <div class="alarmHistory">
-            <button class="btn historyBtn">알림 히스토리</button>
+            <a class="btn historyBtn" href="/pages/history/history.html">알림 히스토리</a>
         </div>
         <div class="setting">
             <div class="setting_wrapper">
@@ -30,7 +30,7 @@
                     <img class="icon_eye" alt="eye icon" src="/icons/eye.png"></img>
                     <div>
                         <p>웹캠 위험행동 감지중</p>
-                        <span>~2pm까지 예약됨</span>
+                        <span>~2:00pm까지 예약됨</span>
                     </div>
                     <button class="btn">예약변경/해제</button>
                 </div>
@@ -40,6 +40,9 @@
             <div class="notice_wrapper">
                 <h2>공지사항</h2>
                 <p>AI-EYE 앱과 웹캠 간단한 연동방법 알아보기!</p>
+                <div class="whiteBox">
+                    <p>글 또는 영상</p>
+                </div>
             </div>
         </div>
     </div>
