--- a/pages/history/history.html
+++ b/pages/history/history.html
@@ -10,12 +10,35 @@
 <body>
     <header class="nav">
         <div class="nav_wrapper">
-            <img class="icon_arrow" alt="back" src="/icons/arrow.png"></img>
+            <a href="/pages/main/main.html"><img class="icon_arrow" alt="back" src="/icons/arrow.png"></img></a>
             <h2>알림 히스토리</h2>
         </div>
     </header>
     <div class="content">
-
+        <div class="noSee">
+            <div class="noSee_wrapper">
+                <h2>읽지 않은 알림</h2>
+                <div class="whiteBox">
+                    <div>
+                        <h3>아이에게 쓰러짐 행동이 감지되었습니다.</h3>
+                        <p>오늘 11:03AM</p>
+                    </div>
+                    <img class="icon_camera" alt="camera" src="/icons/video-camera.png"></img>
+                </div>
+            </div>
+        </div>
+        <div class="yesSee">
+            <div class="yesSee_wrapper">
+                <h2>읽은 알림</h2>
+                <div class="whiteBox">
+                    <div>
+                        <h3>아이에게 쓰러짐 행동이 감지되었습니다.</h3>
+                        <p>오늘 11:03AM</p>
+                    </div>
+                    <img class="icon_camera" alt="camera" src="/icons/video-camera.png"></img>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
