Feat: 시간설정 부분 추가

--- a/pages/main/main.html
+++ b/pages/main/main.html
@@ -32,7 +32,7 @@
                         <p>웹캠 위험행동 감지중</p>
                         <span>~2:00pm까지 예약됨</span>
                     </div>
-                    <button class="btn">예약변경/해제</button>
+                    <a href="/pages/setting/setting.html"><button class="btn">예약변경/해제</button></a>
                 </div>
             </div>
         </div>
