--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -8,6 +8,10 @@
     <title>아이아이(AI-EYE)</title>
 </head>
 <body>
-   
+    <div class="container">
+        <h3>Welcome!</h3>
+        <div><img class="icon_bluetooth" alt="bluetooth" src="/icons/bluetooth.png"></img></div>
+        <a href="/pages/main/main.html"><button>연결</button></a>
+    </div>
 </body>
 </html>
