--- a/pages/index/index.html
+++ b/pages/index/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./login.css" rel="stylesheet"></link>
+    <link href="./index.css" rel="stylesheet"></link>
     <title>아이아이(AI-EYE)</title>
 </head>
 <body>
